# poly-copy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: poly-copy-paper.yml  poly-copy-watch.yml
configs/: default.yaml
dashboard/: attribution.json  backtest_grid.json  data.json  discover.json  equity.json  index.html  ledger.json  universe.json
src/poly_copy/: __init__.py  __main__.py  attribution.py  cli.py  config.py  discover.py  ledger.py  liquidity.py  types.py  universe.py
src/poly_copy/backtest/: __init__.py  grid.py
src/poly_copy/copy/: __init__.py
src/poly_copy/data/: __init__.py
src/poly_copy/features/: __init__.py
src/poly_copy/portfolio/: __init__.py
src/poly_copy/risk/: __init__.py
src/poly_copy/score/: __init__.py
tests/: test_attribution.py  test_backtest_grid.py  test_core.py  test_discover.py  test_ledger.py
worker/: README.md  package-lock.json  package.json  wrangler.toml
worker/src/: index.ts
