[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "poly-copy"
version = "0.1.0"
description = "Polymarket wallet portfolio copy-trading research framework (paper only)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "polymarket-client",
  "pandas>=2.0",
  "numpy>=1.24",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
poly-copy = "poly_copy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
